# quant-research

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: ledger.md  preregistration-template.md  program.md  shadow-observation-policy.md
docs/preregistrations/: QR-008-strength-risk-v5.md  QR-009-smallcap-strength-risk-v5.md  QR-010-mqs-volatility.md  README.md
experiments/: README.md
experiments/QR-008-strength-risk-v5/: README.md  audit_export_backtest.py  build_qc_bundle.py  industry_map.py  main.py  qc_bundle_main.py  research_export.py
experiments/QR-009-smallcap-strength-risk-v5/: README.md  audit_export_backtest.py  build_qc_bundle.py  main.py  qc_bundle_main.py
quant_research/: __init__.py  core.py  scoring_v5.py
quantconnect/: README.md
quantconnect/diagnostics/: field_scale_sample.py  fundamental_field_coverage.py  smallcap_field_coverage.py  synthetic_terminal_returns.py
results/: README.md
results/QR-008-strength-risk-v5/: audit.py  audit_payload.json  manifest.json  summary.md
results/QR-008-strength-risk-v5/shadow/: log.md
results/QR-009-smallcap-strength-risk-v5/: audit.py  audit_payload.json  summary.md
results/QR-009-smallcap-strength-risk-v5/shadow/: log.md
results/QR-010-mqs-volatility/: run-output.txt  summary.md
tests/: test_core.py  test_scoring_v5.py
tests/fixtures/: scoring-v5-golden.json
