[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "disciplined-quant-research"
version = "0.1.0"
description = "Deterministic guardrails for a preregistered quant research program"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["quant_research*"]

